Navigation dropdown alignment fix

--- a/profile/sass/profile.scss
+++ b/profile/sass/profile.scss
@@ -871,7 +871,7 @@ a.submit-button {
                             color: $green;
                             svg {
                                 width: 18px;
-                                height: 18px;
+                                height: 17px;
 
                                 fill: currentColor;
                             }
